Fix JobExecutorIntTest failure on newer JDKs by adding add-opens and disabling sandbox
- Update TestGeneration.java to include --add-opens java.desktop/java.awt=ALL-UNNAMED in spawned client process to prevent InaccessibleObjectException.
- Update JobExecutorIntTest.java to increase timeouts and disable sandbox to prevent hangs during client initialization.
- Reverted unrelated changes to JobHandler.java.